try fixing modal spacing

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -121,12 +121,13 @@ body
   display: none
   max-width: 600px
   padding: 35px
-  max-height: 80vh
+  max-height: calc(100vh - 70px)
   overflow-y: auto
   margin: auto
   background: white
   // margin-top: 40vh
-  margin-top: 50px
+  margin-top: 35px
+  margin-bottom: 35px
   cursor: default
   font-size: 1.3rem
   border-radius: 3px
